--- a/views/clients.ejs
+++ b/views/clients.ejs
@@ -3,7 +3,26 @@
     <section id="clients">
         <div class="container-fluid">
             <div class="error">                
-                <h3><%= existClient %></h3>
+                <% if(success) { %>
+                    <div class="d-flex justify-content-center">                    
+                        <div class="alert alert-success alert-dismissible fade show" role="alert" style="width: 250px; text-align: center;">
+                            <strong><%= success %></strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                        </div>
+                    </div>
+                <% } %>
+                <% if(failure) { %>
+                    <div class="d-flex justify-content-center">                    
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert" style="width: 300px;">
+                            <strong><%= failure %></strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                        </div>
+                    </div>
+                <% } %>
             </div>
             
             <div class="card-deck">
