Function description + Updated project description in .md file + Updated project description in home page

--- a/views/partials/home-footer.ejs
+++ b/views/partials/home-footer.ejs
@@ -11,11 +11,10 @@
           <img class="img-feature-bottom" src= "images/feature-bottom.png" alt="feature">
         </div>
         <div class="col-lg-6 description">
-          <h2 class="heading">curabitur vitae nunc sed velit</h2>
-          <p class="feature">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-            Gravida quis blandit turpis cursus in hac habitasse platea. Donec ac odio tempor orci dapibus ultrices in iaculis.
-             Elementum tempus egestas sed sed. Erat velit scelerisque in dictum non consectetur. Neque ornare aenean euismod elementum nisi quis eleifend. Id eu nisl nunc mi ipsum faucibus. 
-             Est sit amet facilisis magna etiam tempor orci. A erat nam at lectus urna duis convallis convallis. Sagittis purus sit amet volutpat consequat mauris nunc.  </p>
+          <h2 class="heading">Fast. Simple. Free.</h2>
+          <p class="feature">Memories are timeless treasures of the heart. Happy times come and go, but the memories stay forever. A photograph keeps a moment from running away. 
+            Our application EasyShare provides an easy and simple solution to photographers to share photos with the customer and gives customers an easy approach to view and select photos.</p>
+          <p class="feature" style="text-align: center;">Upload your photos to try it for yourself!</p>
         </div>
       </div>
     </div>
